<resources>
    <string name="app_name">Quiz App</string>
    <string name="header_string">How Much Do You Know About Consent? Quiz</string>
    <string name="name_hint">Name</string>
    <string name="welcome_label">Welcome,</string>
    <string name="_1">1.</string>
    <string name="q1_string">Silence or non-communication must never be interpreted as consent.</string>
    <string name="true_string">True</string>
    <string name="false_string">False</string>
    <string name="_2">2.</string>
    <string name="q2_string">A person is capable of giving consent if they are asleep, unconscious or otherwise unable to communicate</string>
    <string name="_3">3.</string>
    <string name="q3_string">There could be rape in marriage.</string>
    <string name="_4">4.</string>
    <string name="q4_string">A person who has been threatened or coerced (e.g. is not agreeing voluntarily) into engaging in the sexual activity is not consenting to it;</string>
    <string name="_5">5.</string>
    <string name="q5_string">The fact that consent was given in the past to a sexual relationship means that consent is deemed to exist for all future sexual activity</string>
    <string name="_6">6.</string>
    <string name="q6_string">A person can\'t withdraw consent at any time during the course of a sexual encounter.</string>
    <string name="_7">7.</string>
    <string name="q7_string">All the following are correct: (Dicey Question)</string>
    <string name="rape_is_an_offence">Rape is an offence</string>
    <string name="third_party_consent">Consent can be given on behalf of another person.</string>
    <string name="victim_shaming_string">Victim shaming is a reason people don\'t report rape cases.</string>
    <string name="no_means_no">No means No!</string>
    <string name="_8">8.</string>
    <string name="legal_age_of_consent">What is the legal age of consent in Nigeria?</string>
    <string name="_9_years">9 years</string>
    <string name="_11_years">11 years</string>
    <string name="_12_years">12 years</string>
    <string name="_15_years">15 years</string>
    <string name="_17_years">17 years</string>
    <string name="_18_years">18 years</string>
    <string name="_9">9.</string>
    <string name="is_excusable">Sex without consent in marriage is excusable?</string>
    <string name="it_depends">It depends</string>
    <string name="_10">10.</string>
    <string name="_make_you_gay">If abused by a person of same sex, does that make you gay?</string>
    <string name="submit">Submit</string>
</resources>
